--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation "androidx.room:room-ktx:2.1.0-rc01"
     kapt "androidx.room:room-compiler:2.1.0-rc01"
 
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    kapt 'com.android.databinding:compiler:1.0-rc4'
+
     // Android Navigation Architecture
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
