--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,8 @@ dependencies {
     implementation "androidx.room:room-ktx:2.1.0-rc01"
     kapt "androidx.room:room-compiler:2.1.0-rc01"
 
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
-    kapt 'com.android.databinding:compiler:1.0-rc4'
+    //debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    //kapt 'com.android.databinding:compiler:1.0-rc4'
 
     // Android Navigation Architecture
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05"
