--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,8 @@ dependencies {
     // Android Navigation Architecture
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
+
+    implementation "com.xwray:groupie:2.3.0"
+    implementation "com.xwray:groupie-kotlin-android-extensions:2.3.0"
+    implementation "com.xwray:groupie-databinding:2.3.0"
 }
