--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation "com.xwray:groupie:2.3.0"
     implementation "com.xwray:groupie-kotlin-android-extensions:2.3.0"
     implementation "com.xwray:groupie-databinding:2.3.0"
+
+    implementation "androidx.preference:preference-ktx:1.1.0"
 }
