--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,43 +37,43 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Retrofit and GSON
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 
     // Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
 
     // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // New Material Design
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 
     // Kodein Dependency Injection
     implementation "org.kodein.di:kodein-di-generic-jvm:6.2.1"
     implementation "org.kodein.di:kodein-di-framework-android-x:6.2.1"
 
     // Android Room
-    implementation "androidx.room:room-runtime:2.1.0-rc01"
-    implementation "androidx.room:room-ktx:2.1.0-rc01"
-    kapt "androidx.room:room-compiler:2.1.0-rc01"
+    implementation "androidx.room:room-runtime:2.3.0-alpha01"
+    implementation "androidx.room:room-ktx:2.3.0-alpha01"
+    kapt "androidx.room:room-compiler:2.3.0-alpha01"
 
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
     //kapt 'com.android.databinding:compiler:1.0-rc4'
 
     // Android Navigation Architecture
-    implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05"
-    implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-rc01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-rc01"
 
     implementation "com.xwray:groupie:2.3.0"
     implementation "com.xwray:groupie-kotlin-android-extensions:2.3.0"
     implementation "com.xwray:groupie-databinding:2.3.0"
 
-    implementation "androidx.preference:preference-ktx:1.1.0"
+    implementation "androidx.preference:preference-ktx:1.1.1"
 }
